--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
   port: 8081
-  servlet:
-    context-path: /bark
 spring:
+  mvc:
+    throw-exception-if-no-handler-found: false
   datasource:
     driver-class-name: org.h2.Driver
     hikari:
@@ -26,3 +26,6 @@ spring:
       hibernate:
         format_sql: false
     show-sql: true
+    open-in-view: true
+  jackson:
+    default-property-inclusion: non_null
