--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.3.7</version>
+        </dependency>
         <!--html模板引擎 类似jsp-->
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
