消息列表页面1

--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,10 @@
             <optional>true</optional>
         </dependency>
         <!--html模板引擎 类似jsp-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
