--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,8 @@ spring:
     time-zone: Asia/Shanghai
     default-property-inclusion: non_null
     date-format: yyyy/MM/dd HH:mm:ss
+  thymeleaf:
+    cache: true
 logging:
   level:
     root: info
