--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       password: admin
   mvc:
     throw-exception-if-no-handler-found: false
-    static-path-pattern: /static/tmp/**
+#    static-path-pattern: /static/tmp/**
   datasource:
     driver-class-name: org.h2.Driver
     hikari:
